[package]
name = "rust_vec_memalloc_for_different_type"
version = "0.1.0"
authors = ["sinsakuokazaki <golisaku4639@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
bytes = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"